--- a/css/title.css
+++ b/css/title.css
@@ -5,13 +5,10 @@ margin: left;
 text-align: center;
 }
 
-#logo{
-width:500px;
-height:150px;
-margin-left: 25px;
-background-color:white;
-text-align: left;
 
+#logo{
+margin-left: 25px;
+text-align: left;
 }
 
 .container1 div{
@@ -25,7 +22,6 @@ height:600px;
 margin: 100px 40% 24px 60%;
 position: relative; /* has to be position relative for left to work, or you could just do margin-left: -50px; too */
 left: 150px;
-
 }
 
 div.business {
@@ -35,6 +31,7 @@ height:400px;
 border: 4px solid black;
 font-size: 20px;
 font-family: Ariel;
+box-shadow: 0 8px 6px -6px black;
 }
 
 div.seeker {
@@ -44,6 +41,7 @@ height:400px;
 border: 4px solid black;
 font-size: 20px;
 font-family: Ariel;
+box-shadow: 0 8px 6px -6px black;
 }
 
 .button {
